# IMPALIB

./: .clang-format  .clang-tidy  .gitignore  .ruff.toml  CMakeLists.txt  LICENSE  README.md  pyproject.toml  ruff.toml  setup.py
.github/workflows/: ci.yml
.old_test/include/: impalib_unit_tests.hpp  ut_graphical_model.hpp  ut_knapsack.hpp  ut_subtour_elimination_constraint.hpp  ut_update_equality_constraint.hpp  ut_utils.hpp
.old_test/python_kc_mwm/src/: compareArrays.py  initializationModule.py  main_pure_optimized.py  project_inequality_constraint.py  update_or_inequality_constraint.py
.old_test/python_kc_mwm/test/: impalib_unit_tests.py  ut_input_output.py  ut_knapsack.py  ut_project_inequality_constraint.py  ut_update_equality_constraint.py  ut_utils.py
.old_test/python_tsp/src/: environmentModule.py  impalib.py  input_output.py  subtour_elimination_constraint.py  update_degree_constraint.py  update_equality_constraint.py
.old_test/python_tsp/test/: ut_graphical_model.py  ut_methods_utils.py
.old_test/src/: impalib_unit_tests_tsp.cpp  unit_test_kc_mwm.sh  unit_test_tsp.sh
.old_test/src/test_EOP/: compareArrays.py
cmake/: impalibConfig.cmake.in
data/inputs_1000/: inputs_set0.pkl  inputs_set1.pkl  inputs_set2.pkl
data/inputs_1000_nNodes_random/: inputs_set1.pkl  inputs_set3.pkl
data/inputs_ksat_zeromean_var_10_samples_500/: inputs_set112.pkl
examples/: demo.cpp
examples/KcMwm/: CMakeLists.txt  demo.cpp
examples/Ksat/: demo.cpp
examples/Tsp/: demo.cpp
include/examples/Ksat/: demo.cpp
include/examples/Tsp/: demo.cpp
include/impalib/: common.hpp  demo.cpp  graphical_model.hpp  impalib.hpp  input_output.hpp  knapsack.hpp  project_inequality_constraint.hpp  subtour_elimination_constraint.hpp  update_degree_constraint.hpp  update_equality_constraint.hpp  update_ksat_constraint.hpp  update_or_inequality_constraint.hpp
src/: BCJR_wrapper_optimized.cpp  IMPA.py  cFunctionAPI.py  main_wrapper_optimized.py
src/data/inputs_1000_nNodes_random/: inputs_set0.pkl  inputs_set2.pkl
src/data/inputs_ksat_zeromean_var_10_samples_500/: inputs_set17.pkl
src/data/inputs_random_params_1000/: inputs_set0.pkl  inputs_set1.pkl
src/impa/: BCJR_wrapper_optimized.cpp  IMPA.py  Impa.py  Wrapper.cpp  __init__.py  cFunctionAPI.py  environmentModule.py  initializationModule.py  main_kc_mwm.py  main_ksat.py  main_tsp.py  main_wrapper_optimized.py
test/: README.md
test/include/: common.hpp  impalib_unit_tests.hpp  ut_graphical_model.hpp  ut_input_output.hpp  ut_knapsack.hpp  ut_project_inequality_constraint.hpp  ut_subtour_elimination_constraint.hpp  ut_update_degree_constraint.hpp  ut_update_equality_constraint.hpp  ut_update_ksat_constraint.hpp  ut_update_or_inequality_constraint.hpp  ut_utils.hpp
test/python/src/: environmentModule.py  graphical_model.py  initializationModule.py  input_output.py  main_pure_optimized.py  update_equality_constraint.py  update_or_inequality_constraint.py
test/python/test/: impalib_unit_tests.py  ut_graphical_model.py  ut_input_output.py  ut_knapsack.py  ut_methods_utils.py  ut_project_inequality_constraint.py  ut_update_equality_constraint.py  ut_utils.py
test/python_kc_mwm/src/: compareArrays.py  environmentModule.py  graphical_model.py  impalib.py  initializationModule.py  input_output.py  knapsack.py  main_pure_optimized.py  project_inequality_constraint.py  update_or_inequality_constraint.py
test/python_kc_mwm/test/: impalib_unit_tests.py  ut_graphical_model.py  ut_input_output.py  ut_knapsack.py  ut_methods_utils.py  ut_project_inequality_constraint.py  ut_update_equality_constraint.py  ut_update_or_inequality_constraint.py  ut_utils.py
test/python_ksat/src/: environmentModule.py  generate_inputs.py  graphical_model.py  impalib.py  input_output.py  main_ksat.py  process2cnf.py  run_minisat.py  update_equality_constraint.py  update_ksat_constraint.py
test/python_ksat/test/: impalib_unit_tests.py  ut_graphical_model.py  ut_input_output.py  ut_methods_utils.py  ut_update_equality_constraint.py  ut_update_ksat_constraint.py  ut_utils.py
test/python_tsp/src/: environmentModule.py  generate_inputs.py  graphical_model.py  impalib.py  input_output.py  main_tsp.py  subtour_elimination_constraint.py  update_degree_constraint.py  update_equality_constraint.py
test/python_tsp/test/: impalib_unit_tests.py  ut_graphical_model.py  ut_input_output.py  ut_methods_utils.py  ut_subtour_elimination_constraint.py  ut_update_degree_constraint.py  ut_update_equality_constraint.py  ut_utils.py
test/src/: demo.cpp  impalib_unit_tests  impalib_unit_tests.cpp  impalib_unit_tests_kc_mwm.cpp  impalib_unit_tests_ksat.cpp  impalib_unit_tests_tsp.cpp  logs.SampleGraph_alpha0.1  logs.SampleGraph_alpha0.9  unit_test.sh  unit_test_kc_mwm.sh  unit_test_ksat.sh  unit_test_tsp.sh
test/src/test_EOP/: compareArrays.py  oric_to_package_m.npy  test_EOP.cpp  test_EOP.py
test_old/include/: common.hpp  ut_project_inequality_constraint.hpp  ut_update_degree_constraint.hpp  ut_update_or_inequality_constraint.hpp
test_old/python_kc_mwm/src/: environmentModule.py  graphical_model.py  impalib.py  input_output.py  knapsack.py  update_equality_constraint.py
test_old/python_kc_mwm/test/: ut_graphical_model.py  ut_methods_utils.py  ut_update_or_inequality_constraint.py
test_old/python_tsp/src/: generate_inputs.py  graphical_model.py  main_tsp.py
test_old/python_tsp/test/: impalib_unit_tests.py  ut_input_output.py  ut_subtour_elimination_constraint.py  ut_update_degree_constraint.py  ut_update_equality_constraint.py  ut_utils.py
test_old/src/: impalib_unit_tests_kc_mwm.cpp
test_old/src/test_EOP/: test_EOP.py
